# OpenSG

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  OpenSG_PreVABS_modify.m  README.md  environment.lock.yml  environment.yml  noxfile.py  paper.bib  paper.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  draft-pdf.yml  test.yml
3D Model/: 3DModel.ipynb  UDcomp_2D.msh  UDcomp_3D.msh
Beam Model/: 3DSG_Timo_Dehom.ipynb  EBbeam.ipynb  TimoBeam.ipynb  Timo_VABS_Legacydolfin.py
Beam Model/Dolfin/: SG40_3D_x.msh
Beam Model/Dolfinx/: EB_Solid_General.py  Timo_solid_cyl.py  solid_cylinder_2D.msh
Plate Model/: 1D SG_Isotropic_ABD.py  1DSG_general_reference.py
Shell Model/: EB Shell_Wind_Blade.py  Timo_Shell_Isotropic.py  Timo_Shell_debugging.py  Timo_WB_debugging.py
Shell Model (dolfinx)/: EB_dolfinx_solid_cylinder_v08.py  Symmetric_Cylinder.py  Tapered Shell Iso_v08 dolfinx.py  bar_urc_shell_xaxis.msh  extract_segment_mesh_yaml.py  ongoing_taper_rotating_frame.py  sym_tapershell_working_20240515.py
Shell Model (dolfinx) /: EB_dolfinx_solid_cylinder.py
Shell Model (dolfinx)/EB with ABD/: ABDimmersed_correctABD_shell-2-Copy1.ipynb  EB_Shell_usinglayup_working_20240604.py  EB_yaml_layup_included.py
Shell Model (dolfinx)/Timo Validation/: 1DSG_airfoil_example.py  Debugging_1DSG_airfoil_Ankitmh104.py
Shell Model (dolfinx)/Timo-Shell/: 1DSG_isotropic.py  ABDimmersed_Timoimplement-7_1DSG-Copy3.ipynb  EB-Shell_WorkingCode.ipynb  EB_SolidCylinder_v08.ipynb  EB_work_Ernesto.py  Explained_EBShell Working.ipynb  Extract_yaml_mesh.ipynb  SG_shell.msh  Timo-Shell_matrixchange_July11.ipynb  Timo_Solid 2D SG.ipynb  Timo_Solid_3DSG_dolfinxv08_2.ipynb  Timo_Solid_Ernesto.py  Timo_Solid_dolfinxv08_3_100July.ipynb  Untitled.ipynb  shell.layup  shell.material.properties  shell.orientation
Shell Model (dolfinx)/Timo_Debug_June26/: Timo-Shell_matrixchange_debugging_June26.py  Timo_Solid 2D SG.ipynb  Timo_SolidCylinder_v08_Debugstage.ipynb  Timo_Solid_dolfinx.py  Timo_Solid_dolfinx_v08_working.py
Shell Model/Kirk_Shell_Timo codes/: TimoShell_1Dcurve.py
akshat_examples/: temp_solid_timo.py
akshat_examples/Beam Model/: Dehom_Timo.ipynb  SG40_2D.msh  SG40_3D.msh  readme.txt
akshat_examples/OpenSG_npl1ar5/: bd_props_bar_urc_right_npl1ar5_20250814.inp
akshat_examples/Plate Model/: 1DSG_general.py
akshat_examples/Shell Model/: EB Shell_Wind_Blade.py  EB_Composite_Cylinder_Ankit.py  circle_R715.msh  cylshell_6144elem.msh
data/OpenSG_npl1ar5/: Timo_mass_stiffness_OpenSG.txt  bd_props_bar_urc_left_npl1ar5_20250814.inp  bd_props_bar_urc_segment_npl1ar5_20250814.inp
data/shell_blade/: bar_urc_shell_mesh_segment_2.yaml
docs/: api-doc.rst  citing_opensg.rst  conf.py  contributing.rst  examples.rst  framework.rst  getting-started.rst  glossary.rst  index.rst  input.rst  installation.rst  license.rst  publications.rst  reference.rst  references.bib  release-notes.rst  requirements.txt  tutorials.rst
docs/tutorials/: 3D_solid_segment.nblink  convert_3D_solid_segment_to_boundary_mesh.nblink  shell_cross_section.nblink  solid_cross_section.nblink  solid_segment_example.nblink  write_beamdyn_input_from_shell_cross_sections.nblink  write_beamdyn_input_from_solid_cross_sections.nblink
docs/user-guide/: citing_opensg.rst  contributing.rst  examples.rst  framework.rst  getting-started.rst  glossary.rst  index.rst  input.rst  installation.rst  overview.rst  reference.rst  references.bib  theory.rst  userguide.rst
dolfinx/Solid Element/: EB model.py  Finalized Solid Timo.py  SolidTimo_CCSworking.txt  (+1 more)
examples/: 1_get_beam_props_from_solid_cross_section.py  20250605_temp_Solid_Buckling.py  2_get_beam_props_from_shell_cross_section.py  3_get_beam_props_from_3D_solid_segment.py  4_get_3D_stress_from_solid_cross_section.py  5_get_3D_stress_from_3D_solid_segment.py  6_write_beamdyn_input_from_solid_cross_sections.py  7_write_beamdyn_input_from_shell_cross_sections.py  8_write_beamdyn_input_from_3D_solid_segments.py  SG_solid.msh  SolidTimo_WB_Finalized.py  Taper_Boun_Regularize_03_16.py  bd_props_1Dyaml_npl1ar5_20260313.inp  bd_props_2Dyaml_npl1ar5_20260313.inp  compute_eb_blade.py  compute_eb_blade_boundaries.py  convert_3D_shell_segment_to_boundary_mesh.py  convert_3D_shell_segment_to_boundary_mesh.py.py  convert_3D_solid_segment_to_boundary_mesh.py  convert_3D_solid_segment_to_boundary_mesh.py.py  eigen_localstress.py  eigenvalue_solver.py  generate_shell_segments.py  run_shell_analysis.py  run_solid_analysis.py  solid_run_eigen.py  solid_segment_example.ipynb
examples/data/: README.md
opensg/: __init__.py  compute_utils.py  io.py  mesh.py  solve.py  timo.py  util.py
tests/: .gitattributes  __init__.py  test_examples.py  test_imports.py  test_shared_utils.py  test_shell.py  test_solid.py
(+275 files in other folders)
