[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensg"
version = "0.1.0"
description = "Open Source Structural Analysis for Wind Turbine Blades"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Akshat Bagla", email = "bagla0@purdue.edu" },
  { name = "Ernesto Camarena", email = "ecamare@sandia.gov" },
  { name = "Kirk Bonney", email = "klbonne@sandia.gov" },
]

requires-python = ">=3.11"

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "fenics-dolfinx>=0.9.0",
    "fenics-basix>=0.9.0",
    "fenics-ufl",
    "fenics-ffcx>=0.9.0",
    "mpi4py>=3.0.0",
    "petsc4py>=3.18.0",
    "pyyaml>=5.4.0",
    "meshio",
    "gmsh",
    "pyvista",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "numpydoc>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/wenbinyugroup/OpenSG"
Documentation = "https://wenbinyugroup.github.io/OpenSG/"
"Bug Tracker" = "https://github.com/wenbinyugroup/OpenSG/issues"

[tool.hatch.build.targets.wheel]
packages = ["opensg"]
