[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensg"
version = "1.0.0"
description = "Open Source Structural Analysis for Wind Turbine Blades"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Akshat Bagla", email = "bagla0@purdue.edu" },
  { name = "Ernesto Camarena", email = "ecamare@sandia.gov" },
  { name = "Kirk Bonney", email = "klbonne@sandia.gov" },
]

requires-python = ">=3.11"

# NOTE: fenics packages require conda or manual C++ dependency installation.
# See https://github.com/fenics/dolfinx for installation instructions.
dependencies = [
  "numpy",
  "scipy",
  "mpi4py",
  "petsc4py",
  "meshio",
  "PyYAML",
  "gmsh",
  "fenics-dolfinx==0.8.0",
  "fenics-basix==0.8.0",
  "fenics-ufl==2024.1.0",
  "fenics-ffcx==0.8.0",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
]
docs = [
    "sphinx>=8.0.0",
    "pydata-sphinx-theme>=0.16.0",
    "sphinxcontrib-bibtex",
    "numpydoc>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/wenbinyugroup/OpenSG"
Documentation = "https://wenbinyugroup.github.io/OpenSG/"
"Bug Tracker" = "https://github.com/wenbinyugroup/OpenSG/issues"

[tool.hatch.build.targets.wheel]
packages = ["opensg"]
